apps/wordpress/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress
  namespace: wordpress
spec:
  hostnames:
    - "wordpress.jonatech.online"
  parentRefs:
    - name: external
      namespace: wordpress
      sectionName: https
  rules:
    - backendRefs:
        - name: wordpress
          namespace: wordpress
          port: 80
